--- a/rest-api-spec/src/main/resources/rest-api-spec/test/cat.indices/10_basic.yml
+++ b/rest-api-spec/src/main/resources/rest-api-spec/test/cat.indices/10_basic.yml
@@ -78,16 +78,16 @@
 
   - match:
       $body: |
-               /^(        \s+
+               /^(green   \s+
                   close   \s+
                   index-2 \s+
                   ([a-zA-Z0-9=/_+]|[\\\-]){22} \s+
+                  3       \s+
                           \s+
                           \s+
                           \s+
                           \s+
-                          \s+
-                          \s*
+                  0       \s*
                 )
                 $/
 ---
