--- a/rest-api-spec/src/main/resources/rest-api-spec/test/cluster.health/20_request_timeout.yml
+++ b/rest-api-spec/src/main/resources/rest-api-spec/test/cluster.health/20_request_timeout.yml
@@ -4,7 +4,7 @@
       catch: request_timeout
       cluster.health:
         wait_for_nodes: 10
-        timeout: 1ms
+        timeout: 1
 
   - is_true:   cluster_name
   - is_true:   timed_out
@@ -22,7 +22,7 @@
   - do:
       catch: request_timeout
       cluster.health:
-        timeout: 1ms
+        timeout: 1
         wait_for_active_shards: 5
 
   - is_true:   cluster_name
